--- a/clients/web/styles/design-tokens.css
+++ b/clients/web/styles/design-tokens.css
@@ -29,7 +29,7 @@
   --color-secondary-400: #c084fc;
   --color-secondary-500: #a855f7;
   --color-secondary-600: #9333ea;
-  --color-secondary-700: #7c2d12;
+  --color-secondary-700: #7c3aed;
   --color-secondary-800: #6b21a8;
   --color-secondary-900: #581c87;
   
